--- a/cbu_it_buddy/android/app/build.gradle
+++ b/cbu_it_buddy/android/app/build.gradle
@@ -3,8 +3,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.android.application'
-    id 'com.google.gms.google-services'
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -44,14 +43,16 @@ android {
 flutter {
     source = "../.."
 }
+
+
 dependencies {
   // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:33.2.0')
+    implementation(platform("com.google.firebase:firebase-bom:33.3.0"))
 
 
   // TODO: Add the dependencies for Firebase products you want to use
   // When using the BoM, don't specify versions in Firebase dependencies
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation("com.google.firebase:firebase-analytics")
 
 
   // Add the dependencies for any other desired Firebase products
