--- a/cbu_it_buddy/pubspec.yaml
+++ b/cbu_it_buddy/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.5.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  #assets:
+  assets:
+  - lib/solution/
     #- assets/images/cbu_logo.png
   #   - images/a_dot_ham.jpeg
 
