--- a/cbu_it_buddy/pubspec.yaml
+++ b/cbu_it_buddy/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.5.0
   url_launcher: ^6.3.1
   cloud_firestore: ^5.6.2
+  flutter_markdown: ^0.6.12
 
 dev_dependencies:
   flutter_test:
