--- a/cbu_it_buddy/.gitignore
+++ b/cbu_it_buddy/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Folders
+scripts/java/PDFProcessor/pdf
+scripts/java/PDFProcessor/text
