--- a/cbu_it_buddy/pubspec.yaml
+++ b/cbu_it_buddy/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,6 +40,10 @@ dependencies:
   url_launcher: ^6.3.1
   cloud_firestore: ^5.6.2
   flutter_markdown: ^0.6.12
+  http: ^1.3.0
+  flutter_dotenv: ^5.2.1
+  dart_openai: ^5.1.0
+  #dart_openai: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - lib/solution/
+  #- lib/.env
     #- assets/images/cbu_logo.png
   #   - images/a_dot_ham.jpeg
 
