--- a/cbu_it_buddy/pubspec.yaml
+++ b/cbu_it_buddy/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   url_launcher: ^6.3.1
   cloud_firestore: ^5.6.2
   flutter_markdown: ^0.6.12
+  
+  # Game engine for the GolfCart game
+  flame: ^1.16.0
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
