--- a/cbu_it_buddy/pubspec.yaml
+++ b/cbu_it_buddy/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_markdown: ^0.6.12
   
   # Game engine for the GolfCart game
-  flame: ^1.16.0
+  flame: ^1.21.0
   vector_math: ^2.1.4
 
 dev_dependencies:
@@ -68,8 +68,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - lib/solution/
-    #- assets/images/cbu_logo.png
+    - assets/       # Add the root assets directory
+    - assets/images/
+    - lib/solution/
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
